--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,10 @@
 name: TVC-Arena
-version: 1.1
+version: 1.2
 main: net.tvc.ArenaInstance
+author: RPiCPU
+website: truevanilla.net
+description: Plugin for the True Vanilla Community arena server
+api-version: 1.21
 commands:
   arena:
     description: TVC Arena Command
