--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,7 @@
 # ------------------------------------------------------------------------------------------
 # 
 # (note to whoever is reading this: the coordinates below are just placeholders, replace them with actual values)
-# (another note to whoever is reading this: these comments were written by chatgpt, so if they seem a bit off, blame it on the ai, not me)
+# (another note to whoever is reading this: these comments were written by vscode github copilot whatever, so if they seem a bit off, blame it on the ai, not me)
 # (3rd and final note: this plugin was written by me (rpicpu), not ai, so if you have any questions about it or need help, feel free to contact me on discord (rpicpu))
 
 arenas:
